fixing homepage layout on mobile

--- a/assets/stylesheets/_project.scss
+++ b/assets/stylesheets/_project.scss
@@ -94,6 +94,7 @@
 .project-thumb {
   display: inline-block;
   text-align: right;
+  margin-bottom: 5px;
 
   img {
     width: 80%;
